# ThePlayground

./: .gitignore  .gitpod.yml  Algorithmic_Trading_using_Python.ipynb  Data_Visualization_in_Python_for_Machine_Learning_Engineers.ipynb  LSTM_Stock_Prediction.ipynb  README.md  regex.ipynb
.devcontainer/: .dockerfile  .gitpod.dockerfile  devcontainer.json  requirements.txt
3.TheForexDataAnalysis/airflow-materials/airflow-section-2/: Dockerfile
3.TheForexDataAnalysis/airflow-materials/airflow-section-3/: reset.sh  start.sh  stop.sh
ExcelToDashboard/: README.md
FreelanceJobAnalysis/: pyproject.toml
FreelanceJobAnalysis/freelancejobanalysis/: upwork_analysis.py
Notebooks/: Algorithmic_Trading_using_Python.ipynb  Data_Visualization_for_MLEs.ipynb  Ethereum_Price_prediction_LR.ipynb  LSTM_Stock_Prediction.ipynb  clean_youtube_links.txt  pytorch_cuda_test.ipynb  regex.ipynb  transcript.txt  webscraper.ipynb  youtube_test.json
Others/: Data_Visualization_in_Python_for_Machine_Learning_Engineers.ipynb  Ethereum_Price_prediction_LR.ipynb  LSTM_Stock_Prediction.ipynb  gmaps_analysis.ipynb  location_analysis.py
TheRedditAnalyser/: README.md
geolocationAnalysis/: README.md  project_structure.py  requirements.txt  setup.py
geolocationAnalysis/src/: location_analysis.py  main.py
geolocationAnalysis/src/database/: __init__.py  db_operation.py  duckdb_operation.py
geolocationAnalysis/src/dataclient/: __init__.py  geonames_api.py  googlemaps_api.py  reddit_api.py
geolocationAnalysis/src/models/: __init__.py  (+2 more)
jobscraper/jobscraper/: items.py  settings.py
(+54 files in other folders)
