[tool.poetry]
name = "freelancejobanalysis"
version = "0.1.0"
description = ""
authors = ["Nitish <22993803+nitish-raj@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.8"
feedparser = "^6.0.11"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
