[tool.poetry]
name = "freelancejobanalysis"
version = "0.1.0"
description = "Freelance job posting Data Analysis"
authors = ["Nitish <22993803+nitish-raj@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
feedparser = "^6.0.11"
boto3 = "^1.34.8"
black = "^23.12.1"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
